apps/copyparty/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
spec:
  replicas: 1
  serviceName: copyparty
  selector:
    matchLabels:
      app.kubernetes.io/instance: copyparty
      app.kubernetes.io/name: copyparty
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: copyparty
        app.kubernetes.io/name: copyparty
    spec:
      containers:
        - name: copyparty
          image: copyparty
          ports:
            - name: http
              containerPort: 3923
          readinessProbe:
            httpGet:
              path: /?reset=/._
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /?reset=/._
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /?reset=/._
              port: http
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 180
          volumeMounts:
            - name: config
              mountPath: /cfg
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: copyparty-config
        - name: rclone-config
          configMap:
            name: copyparty-rclone
        - name: startup-config
          configMap:
            name: copyparty
