apps/copyparty/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  ports:
    - name: http
      port: 3923
      targetPort: http
  selector:
    app.kubernetes.io/name: copyparty
