apps/copyparty/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
spec:
  defaultBackend:
    service:
      name: copyparty
      port:
        name: http
  tls:
    - hosts:
        - copyparty
