apps/copyparty/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: copyparty
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: copyparty
  policyTypes:
    - Ingress
